@@ -1,6 +1,6 @@
 Package: optimx
-Version: 2013.7.3
-Date: 2012-07-03
+Version: 2013.7.8
+Date: 2013-07-08
 Title: A Replacement and Extension of the optim() Function
 Authors@R: c( person(given = c("John", "C."), family = "Nash", role =
         c("aut", "cre"), email = "nashjc@uottawa.ca"), person(given =
